[package]
name = "datomic-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "datomic_py"
crate-type = ["cdylib"]

[[bin]]
bench = false
path = "src/main.rs"
name = "datomic-py"

[dependencies]
j4rs = "0.22.0"
pyo3 = "0.23.3"
rand = "0.9.0"
